# heterogeneous-tree

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/heterogeneous_tree/: node.h  visitor.h
src/: node.cpp
tests/: CMakeLists.txt  test_node.cpp
